# to-be-track-recorder

./: .gitignore  CHANGELOG.md  Makefile  README.md
control/: Cargo.toml
control/tests/: cassette.feature  cv.feature  pan.feature  pitch.feature  reset.feature  volume.feature
dsp/: Cargo.toml  Makefile
dsp/src/: lib.rs
dsp/src/paging_buffer/: buffer.rs  cassette.rs  config.rs  manager.rs  mod.rs  page.rs  pool.rs  track.rs
firmware/: Cargo.toml  Makefile
firmware/src/: lib.rs
firmware/src/system/: mod.rs
hack/: release.sh
hardware/: .gitignore  Custom.kicad_sym  Module.kicad_pcb  Module.kicad_pro  Module.kicad_sch  rotary_switch_resistor_ladder.circuitjs.txt
hardware/Custom.pretty/: Potentiometer_Thonk_Trimmer.kicad_mod  Rotary_Switch_8_Alpha.kicad_mod  microSD_MOLEX_5033981892.kicad_mod
tests/: Cargo.toml  Makefile
tests/tests/: afx.feature  play.feature  record.feature  test.rs
