[package]
name = "placeholder-control"
version = "0.1.0"
edition = "2021"
authors = ["Petr Horáček <petr@zlosynth.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "main"
harness = false  # allows Cucumber to print output instead of libtest
